--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
 	</section>
 
 	<section class="ftco-about d-md-flex">
-		<div class="one-half img" class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(images/about.webp);"
-		data-stellar-background-ratio="0.5" ;"></div>
+		<div class="one-half img"  style="background-image: url(images/about.webp) ;"></div>
 		<div class="one-half ftco-animate">
 			<div class="overlap">
 				<div class="heading-section ftco-animate ">
