--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html"><img src="./images/TeadayPNG.png" height="80" width="200"></a>
+			<a class="navbar-brand" href="index.html"><img src="./images/TeadayPNG.png" height="80" width="200" alt="Tea day"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -50,10 +50,10 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Franchise</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="menu" class="nav-link">Menu</a></li>
+					<li class="nav-item"><a href="services" class="nav-link">Franchise</a></li>
+					<li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
+					<li class="nav-item"><a href="about" class="nav-link">About</a></li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Shop</a>
