--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="menu" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="services" class="nav-link">Franchise</a></li>
-					<li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
-					<li class="nav-item"><a href="about" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
+					<li class="nav-item"><a href="services.html" class="nav-link">Franchise</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Shop</a>
