--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
@@ -36,10 +38,14 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
+	<!--Whatsapp Floating Button-->
+	<a href="https://api.whatsapp.com/send?phone=+917406077788&text=%20" class="animate__animated  animate__fadeInUp animate__slow animate__delay-5s float" target="_blank">
+	<i class="fa fa-whatsapp my-float"></i>
+	</a>
+
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
 			<a class="navbar-brand" href="index.html"><img src="./images/TeadayPNG.png" height="80" width="200" alt="Tea day"></a>
@@ -74,7 +80,7 @@
 		</div>
 	</nav>
 	<!-- END nav -->
-    
+
 	<section class="home-slider owl-carousel" data-bs-spy="scroll">
 		<div  class="slider-item" style="background-image: url(images/bg_1.webp) ;">
 			<div class="overlay"></div>
@@ -834,7 +840,6 @@
 	<script src="js/main.js"></script>
 
 
-
 </body>
 <script type="text/javascript">
 	$(function () {
@@ -848,5 +853,4 @@
 		});
 	});
 </script>
-
 </html>
