--- a/product-single.html
+++ b/product-single.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
@@ -29,6 +33,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+	<!--Whatsapp Floating Button-->
+	<a href="https://api.whatsapp.com/send?phone=+917406077788&text=%20" class="animate__animated  animate__fadeInUp animate__slow animate__delay-5s float" target="_blank">
+		<i class="fa fa-whatsapp my-float"></i>
+		</a>
+
   	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 			<a class="navbar-brand" href="index.html"><img src="./images/TeadayPNG.png" height="80" width="200"></a>
