--- a/blog-single.html
+++ b/blog-single.html
@@ -390,9 +390,12 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://sponsorgenix.in" target="_blank">Sponsorgenix</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p>
+              Copyright &copy;
+              <script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is
+              made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://sponsorgenix.in"
+                target="_blank">Sponsorgenix</a>
+        </p>
           </div>
         </div>
       </div>
