--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 					</div>
 				</div>
 				<div class="book p-4">
-					<h3>Book a Table</h3>
+					<h3>Book TeaDay Franchise</h3>
 					<form action="#" class="appointment-form">
 						<div class="d-md-flex">
 							<div class="form-group">
@@ -269,8 +269,10 @@
 									placeholder="Message"></textarea>
 							</div>
 							<div class="form-group ml-md-4">
-								<input type="submit" value="Appointment" class="btn btn-white py-3 px-4">
+								<p><a href="https://api.whatsapp.com/send?phone=+917406077788&text=%20" target="_blank"
+										class="btn btn-white py-3 px-4">Appointment</a></p>
 							</div>
+
 						</div>
 					</form>
 				</div>
@@ -737,10 +739,13 @@
 		<div class="container-wrap">
 			<div class="row no-gutters d-md-flex align-items-center">
 				<div class="col-md-6 d-flex align-self-stretch">
-                    
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.2294235348554!2d77.70882879999999!3d12.9571661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae13db1f065c15%3A0xd9f79cd97f6330ad!2sTea%20Day!5e0!3m2!1sen!2sin!4v1659850319037!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    
-<!--					<div id="map"></div>-->
+
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.2294235348554!2d77.70882879999999!3d12.9571661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae13db1f065c15%3A0xd9f79cd97f6330ad!2sTea%20Day!5e0!3m2!1sen!2sin!4v1659850319037!5m2!1sen!2sin"
+						width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+					<!--					<div id="map"></div>-->
 				</div>
 				<div class="col-md-6 appointment ftco-animate">
 					<h3 class="mb-3">Book a Table</h3>
