--- a/menu.html
+++ b/menu.html
@@ -123,7 +123,7 @@
 					</div>
 				</div>
 				<div class="book p-4">
-					<h3>Book a Table</h3>
+					<h3>Book Our Franchise</h3>
 					<form action="#" class="appointment-form">
 						<div class="d-md-flex">
 							<div class="form-group">
@@ -156,7 +156,8 @@
 									placeholder="Message"></textarea>
 							</div>
 							<div class="form-group ml-md-4">
-								<input type="submit" value="Appointment" class="btn btn-white py-3 px-4">
+								<p><a href="https://api.whatsapp.com/send?phone=+917406077788&text=%20" target="_blank"
+										class="btn btn-white py-3 px-4">Appointment</a></p>
 							</div>
 						</div>
 					</form>
